--- a/02 Functions/02 uebungen/level 3/style.css
+++ b/02 Functions/02 uebungen/level 3/style.css
@@ -40,4 +40,16 @@ button:hover{
 .xlBtn{
     width: 300px;
 }
-
+input{
+    height: 40px;
+    width: 120px;
+    font-size: 16px;
+    background-color: #eee;
+    border: none;
+    border-radius: 8px;
+    transition: all 1.2s ease;
+}
+input:hover{
+    background-color: #ccc;
+    transform: scale(1.1);
+}
