--- a/06 working with DOM/02 todo uebung/style.css
+++ b/06 working with DOM/02 todo uebung/style.css
@@ -41,3 +41,17 @@ footer {
     text-decoration: line-through;
     color: gray;
 }
+button {
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 8px;
+  background-color: #3498db;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #2980b9;
+}
